--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,10 +4,10 @@
     "com.unity.device-simulator.devices": "1.0.0",
     "com.unity.feature.development": "1.0.2",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.render-pipelines.universal": "17.0.2",
     "com.unity.timeline": "1.8.6",
     "com.unity.ugui": "2.0.0",
     "com.unity.ui": "2.0.0",
+    "com.unity.visualeffectgraph": "17.0.2",
     "com.unity.visualscripting": "1.9.1",
     "com.unity.xr.arcore": "6.0.0-pre.5",
     "com.unity.xr.arfoundation": "6.0.0-pre.5",
